[tool.poetry]
name = "nurikabe-solver"
version = "0.1.0"
description = "Python solver for Nurikabe puzzles."
authors = ["David Himelick"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
